tests/models/enum/named/i8/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: i8
    },
}
fn main() {}
